GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/while_without_parentheses.deca
// Test : syntax_invalid_while_without_parentheses
// But : interdire une condition while sans parenthèses.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    while true {
        
    }
}